p3/confs/app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    name: dev
