p3/confs/argocd-app-guestbook.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: guestbook
  labels:
    name: guestbook
