p3/confs/argocd-app-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /guestbook
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: guestbook-strip-prefix@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /guestbook
            pathType: Prefix
            backend:
              service:
                name: guestbook-ui
                port:
                  number: 80
