p3/confs/guestbook.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: dev
spec:
  rules:
  - host: guestbook.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guestbook-ui
            port:
              number: 80
---
